Fixed box shadow and padding on small screens and confined to just larger screens.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,13 +215,19 @@ textarea.form-control {
 input.form-control:focus,
 textarea.form-control:focus {
   border-color: rgb(161, 163, 166);
-  box-shadow: 0 0 0 0.2rem rgb(161, 163, 166);
+  box-shadow: 0 0 0 3px rgb(161, 163, 166);
 }
 
 .contact-info-col {
     background-color: rgb(52, 58, 64);
-    box-shadow: -10px -10px rgb(161, 163, 166);
+    box-shadow: 0px -10px 10px 0px rgb(161, 163, 166);
     color: rgb(255, 255, 255);
+}
+
+@media (min-width: 1200px) {
+.contact-info-col {
+    box-shadow: -10px -10px rgb(161, 163, 166);
+}
 }
 
 /* ------------------------------------------------------ Header */
@@ -532,25 +538,24 @@ button.close {
 
 .contact-map {
     border: 0;
-    width: 70%;
+    width: 80%;
     height: 250px;
 }
 
+@media (min-width: 1200px) {
 .col-xl-6.contact-form-col,
 .col-xl-6.contact-info-col {
     padding-left: 20px;
     padding-right: 20px;
 }
+}
 
 .contact-info-col {
-    background-color: rgb(52, 58, 64);
     padding: 10px;
-    box-shadow: -10px -10px rgb(161, 163, 166);
     margin-top: 20px;
     margin-bottom: 20px;
     padding-right: 0px;
     padding-left: 0px;
-    color: white;
 }
 
 
